герой не берет паддинги

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 </head>
 <body>
     <header class="header">
-        <div class="container">
             <div class="main">
                 <svg class="logo" width="69" height="56">
                     <use href="./images/sprite-header.svg#icon-Logo"></use>
@@ -52,16 +51,17 @@
                     </nav>
                 </div>
             </div>
-        </div>
     </header>
 
     <hero class="hero">
-        <div class="container">
             <div class="sidebar-block">
                 <ul class="sidebar-hero">
                     <li class="social-hero"><a class="link-hero" href="#">Instagram</a></li>
                     <li class="social-hero"><a class="link-hero" href="#">Youtube</a></li>
                 </ul>
+                <svg class="logo-sidebar" width="69" height="56">
+                    <use href="./images/sprite-header.svg#icon-Logo"></use>
+                </svg>
             </div>
             <div class="hero-photo">
                 <div class="content-block">
@@ -75,13 +75,12 @@
                         <use href="./images/sprite-header.svg#icon-Slider-Desk"></use>
                     </svg>
         
-                    <div class="slider">
-                        <a class="slider-link" href="#">Назад</a>
-                        <a class="slider-link" href="#">Вперед</a>
-                    </div>
+                    <ul class="slider">
+                        <li class="slider-link">Назад</li>
+                        <li class="slider-link">Вперед</li>
+                    </ul>
                 </div>
             </div>  
-        </div>
     </hero>
 
     <script src="./js/menu.js"></script>
